Fix spacing issue in home big

--- a/src/views/Home/Home.sass
+++ b/src/views/Home/Home.sass
@@ -191,5 +191,8 @@
   .job-sub::before
     width: 22.428rem
 
+  .title-sub--half
+    margin-top: 2.618rem
+
   .job-sub--shorter::before
     width: 13.861rem
